[gd_scene load_steps=3 format=3 uid="uid://c4umpwtl6o6ut"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_uopri"]
[ext_resource type="Script" path="res://scripts/ProjectileMovementComponent.gd" id="2_ohcy0"]

[node name="Projectile" type="Area2D"]
script = ExtResource("1_uopri")
can_take_damage = false

[node name="ProjectileMovementComponent" type="Node2D" parent="."]
script = ExtResource("2_ohcy0")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
